# snowflake2

./: .gitignore  README.md  setup.cfg  snowflake.py
src/python-snowflake-2/: __init__.py
src/python_snowflake_2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/snowflake2/: __init__.py  snowflake.py
src/snowflake2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
