[metadata]
name = snowflake2
version = 0.1.1
author = Connor Ahern
author_email = dck.dachickenking@gmail.com
description = Based on falcondai and fenhl's Python snowflake library with changes to be more similar to Discord and include documentation. This has been developed for use in Learnloot's backend, but anyone may use it.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Learnloot/python-snowflake-2
project_urls =
    Bug Tracker = https://github.com/Learnloot/python-snowflake-2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src